<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <com.google.android.material.circularreveal.CircularRevealRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/form_title"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_anim"
            android:layout_below="@+id/tv_title"
            android:layout_centerHorizontal="true"
            app:lottie_rawRes="@raw/form"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_marginBottom="10dp"
            android:layout_width="210dp"
            android:layout_height="210dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name"
            android:layout_below="@+id/lottie_anim"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/full_name"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_full_name"
            android:layout_below="@+id/tv_name"
            android:hint="@string/input_full_name"
            android:textColor="@color/black"
            android:textColorHint="#6C6161"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_are_you_it"
            android:layout_below="@+id/et_full_name"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/are_you_from_it"/>

        <RadioGroup
            android:id="@+id/rg_one"
            android:layout_below="@+id/tv_are_you_it"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_yes"
                android:text="@string/yes"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_no"
                android:text="@string/no"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_question_2"
            android:layout_below="@+id/rg_one"
            android:layout_centerHorizontal="true"
            android:text="@string/program_language"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:id="@+id/relay_first"
            android:layout_below="@+id/tv_question_2"
            android:layout_toStartOf="@+id/barrier_01"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/mcb_java"
                android:text="@string/java"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/mcb_kotlin"
                android:layout_marginEnd="10dp"
                android:text="@string/kotlin"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/mcb_dart"
                android:layout_marginEnd="10dp"
                android:text="@string/dart"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/mcb_js"
                android:layout_marginEnd="10dp"
                android:text="@string/java_script"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/barrier_01"
            android:layout_below="@+id/tv_question_2"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:id="@+id/relay_second"
            android:layout_toEndOf="@+id/barrier_01"
            android:layout_below="@+id/tv_question_2"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/mcb_c"
                android:text="@string/c_programing"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/mcb_c_plus_plus"
                android:layout_marginEnd="10dp"
                android:text="@string/c_plus_plus_programing"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/mcb_c_sharp"
                android:layout_marginEnd="10dp"
                android:text="@string/c_sharp_programing"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/mcb_php"
                android:layout_marginEnd="10dp"
                android:text="@string/php_programing"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_below="@+id/relay_second"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/img_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:srcCompat="@android:drawable/ic_delete"
                android:contentDescription="@string/todo" />

            <ImageButton
                android:id="@+id/img_button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:srcCompat="@android:drawable/ic_input_add"
                android:contentDescription="@string/todo" />

        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    </com.google.android.material.circularreveal.CircularRevealRelativeLayout>

</ScrollView>
